crates/fyn-resolver/src/lock/snapshots/fyn_resolver__lock__tests__missing_dependency_source_unambiguous.snap
---
source: crates/fyn-resolver/src/lock/mod.rs
assertion_line: 6614
expression: result
---
Ok(
    Lock {
        version: 1,
        revision: 0,
        fork_markers: [],
        conflicts: Conflicts(
            [],
        ),
        supported_environments: [],
        required_environments: [],
        requires_python: RequiresPython {
            specifiers: VersionSpecifiers(
                [
                    VersionSpecifier {
                        operator: GreaterThanEqual,
                        version: "3.12",
                    },
                ],
            ),
            range: RequiresPythonRange(
                LowerBound(
                    Included(
                        "3.12",
                    ),
                ),
                UpperBound(
                    Unbounded,
                ),
            ),
        },
        options: ResolverOptions {
            resolution_mode: Highest,
            prerelease_mode: IfNecessaryOrExplicit,
            fork_strategy: RequiresPython,
            exclude_newer: ExcludeNewerWire {
                exclude_newer: None,
                exclude_newer_span: None,
                exclude_newer_package: ExcludeNewerPackage(
                    {},
                ),
            },
        },
        packages: [
            Package {
                id: PackageId {
                    name: PackageName(
                        "a",
                    ),
                    version: Some(
                        "0.1.0",
                    ),
                    source: Registry(
                        Url(
                            UrlString(
                                "https://pypi.org/simple",
                            ),
                        ),
                    ),
                },
                sdist: Some(
                    Url {
                        url: UrlString(
                            "https://example.com",
                        ),
                        metadata: SourceDistMetadata {
                            hash: Some(
                                Hash(
                                    HashDigest {
                                        algorithm: Sha256,
                                        digest: "37dd54208da7e1cd875388217d5e00ebd4179249f90fb72437e91a35459a0ad3",
                                    },
                                ),
                            ),
                            size: Some(
                                0,
                            ),
                            upload_time: None,
                        },
                    },
                ),
                wheels: [],
                fork_markers: [],
                dependencies: [],
                optional_dependencies: {},
                dependency_groups: {},
                metadata: PackageMetadata {
                    requires_dist: {},
                    provides_extra: [],
                    dependency_groups: {},
                },
            },
            Package {
                id: PackageId {
                    name: PackageName(
                        "b",
                    ),
                    version: Some(
                        "0.1.0",
                    ),
                    source: Registry(
                        Url(
                            UrlString(
                                "https://pypi.org/simple",
                            ),
                        ),
                    ),
                },
                sdist: Some(
                    Url {
                        url: UrlString(
                            "https://example.com",
                        ),
                        metadata: SourceDistMetadata {
                            hash: Some(
                                Hash(
                                    HashDigest {
                                        algorithm: Sha256,
                                        digest: "37dd54208da7e1cd875388217d5e00ebd4179249f90fb72437e91a35459a0ad3",
                                    },
                                ),
                            ),
                            size: Some(
                                0,
                            ),
                            upload_time: None,
                        },
                    },
                ),
                wheels: [],
                fork_markers: [],
                dependencies: [
                    Dependency {
                        package_id: PackageId {
                            name: PackageName(
                                "a",
                            ),
                            version: Some(
                                "0.1.0",
                            ),
                            source: Registry(
                                Url(
                                    UrlString(
                                        "https://pypi.org/simple",
                                    ),
                                ),
                            ),
                        },
                        extra: {},
                        simplified_marker: SimplifiedMarkerTree(
                            true,
                        ),
                        complexified_marker: python_full_version >= '3.12',
                    },
                ],
                optional_dependencies: {},
                dependency_groups: {},
                metadata: PackageMetadata {
                    requires_dist: {},
                    provides_extra: [],
                    dependency_groups: {},
                },
            },
        ],
        by_id: {
            PackageId {
                name: PackageName(
                    "a",
                ),
                version: Some(
                    "0.1.0",
                ),
                source: Registry(
                    Url(
                        UrlString(
                            "https://pypi.org/simple",
                        ),
                    ),
                ),
            }: 0,
            PackageId {
                name: PackageName(
                    "b",
                ),
                version: Some(
                    "0.1.0",
                ),
                source: Registry(
                    Url(
                        UrlString(
                            "https://pypi.org/simple",
                        ),
                    ),
                ),
            }: 1,
        },
        manifest: ResolverManifest {
            members: {},
            requirements: {},
            dependency_groups: {},
            constraints: {},
            overrides: {},
            excludes: {},
            build_constraints: {},
            dependency_metadata: {},
        },
    },
)
